# ws-ESP32-S3-CAM

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: audit-wavs.md  build.md  extract-session.md  flash.md  hardware-specs.md  ml-researcher.md  monitor.md  peripherals.md  restore-factory.md  safe-dev.md
datasets/cry-detect-01/: INVENTORY.md  README.md
docs/blog/: putting-yamnet-on-an-esp32-s3.md
docs/internal/: code-improvement-session-20260417.md  cry-detect-01-plan.md  hardware-utilization-audit.md  next-session-playbook.md  progress-and-todos-20260418.md  stage2-plan.md
docs/research/: README.md  classification-logging-plan.md  cry-detect-01-memory-budget-20260503.md  cry-detect-data-program-plan.md  cry-detect-starter-plan.md  crying-detection-s3-ml-alternatives.md  data-extraction-redesign-20260503.md  data-reassessment-20260425.md  data-vault-redesign-20260425.md  deep-analysis-20260423.md  deployment-01-log-analysis-20260418.md  (+27 more)
projects/cry-detect-01/main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  audio_capture.h  audio_stream.c  audio_stream.h  auto_trigger.c  auto_trigger.h  breadcrumb.c  breadcrumb.h  detector.c  detector.h  event_recorder.c  event_recorder.h  file_api.c  file_api.h  idf_component.yml  led_alert.c  led_alert.h  log_retention.c  log_retention.h  main.c  mel_features.c  mel_features.h  metrics.c  metrics.h  metrics_logger.c  metrics_logger.h  network.c  network.h  noise_floor.c  noise_floor.h  range_parser.c  range_parser.h  sd_logger.c  sd_logger.h  session_marker.c  session_marker.h  student.cc  student.h  (+11 more)
(+38 files in other folders)
